Fixed modal and horizontal scrolling

--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,10 @@
 
 @import "http://fonts.googleapis.com/css?family=Raleway:400,800,700,600,500";
+
+html, body {
+    max-width: 100%;
+    overflow-x: hidden;
+}
 body {
   -webkit-font-smoothing: antialiased;
   -webkit-text-size-adjust: 100%;
@@ -5049,4 +5054,9 @@ section#contact:-ms-input-placeholder {
 
 section#contact .text-danger {
     color: #e74c3c;
+}
+
+
+.cbp-item a{
+  cursor: pointer;
 }
